# script.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
codegen/: Cargo.toml
codegen/src/: custom_type.rs  function.rs  lib.rs  module.rs  rhai_module.rs
codegen/src/test/: custom_type.rs  function.rs  module.rs
codegen/tests/: test_custom_type.rs  test_nested.rs
codegen/tests/custom_root/: Cargo.toml
codegen/tests/custom_root/src/: lib.rs
codegen/ui_tests/: export_fn_bad_attr.stderr  export_fn_bad_value.stderr  export_fn_extra_value.stderr  export_fn_junk_arg.stderr  export_fn_missing_value.stderr  export_fn_path_attr.stderr  export_fn_raw_noreturn.stderr  export_fn_raw_return.stderr  export_mod_bad_attr.stderr  export_mod_bad_value.stderr  export_mod_cfg.stderr  export_mod_extra_value.stderr  export_mod_junk_arg.stderr  export_mod_missing_value.stderr  export_mod_path_attr.stderr  export_mod_raw_noreturn.stderr  export_mod_raw_return.stderr  first_shared_ref.stderr  non_clonable.stderr  non_clonable_second.stderr  return_mut_ref.stderr  return_pointer.stderr  return_shared_ref.stderr  rhai_fn_bad_attr.stderr  rhai_fn_bad_value.stderr  rhai_fn_duplicate_attr.stderr  rhai_fn_extra_value.stderr  rhai_fn_getter_conflict.stderr  rhai_fn_getter_multiple.stderr  rhai_fn_getter_return.stderr  rhai_fn_getter_signature.stderr  rhai_fn_global_multiple.stderr  rhai_fn_index_getter_multiple.stderr  rhai_fn_index_getter_return.stderr  rhai_fn_index_getter_signature.stderr  rhai_fn_index_setter_multiple.stderr  rhai_fn_junk_arg.stderr  rhai_fn_missing_value.stderr  rhai_fn_non_clonable_return.stderr  rhai_fn_path_attr.stderr  (+24 more)
src/: defer.rs  engine.rs  lib.rs  optimizer.rs  parser.rs  tokenizer.rs
src/api/: call_fn.rs  deprecated.rs  eval.rs  events.rs  files.rs
src/api/definitions/: mod.rs
src/ast/: ast.rs  expr.rs  flags.rs  stmt.rs
src/config/: hashing.rs
src/eval/: eval_context.rs  expr.rs  global_state.rs  mod.rs
src/func/: call.rs  func_args.rs  native.rs  plugin.rs  script.rs
src/module/resolvers/: collection.rs
src/types/: dynamic.rs  error.rs  fn_ptr.rs  immutable_string.rs  mod.rs  plots.rs
tests/: arrays.rs  build_type.rs  custom_syntax.rs  fn_ptr.rs  functions.rs  maps.rs  method_call.rs  modules.rs  optimizer.rs  parse_json.rs  pipeline_operator.rs  plugins.rs  string.rs  switch.rs
